# address_book_and_min_max_of_2d_array

task_a/: CMakeLists.txt  README.md
task_a/src/: task_a.cpp
task_b/: CMakeLists.txt  README.md
task_b/src/: task_b_main.cpp
